# omnidrive

./: README.md
bot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bot_description/config/: mapping.rviz
bot_description/gazebo/: bot.gazebo
bot_description/launch/: display.launch.py
bot_description/meshes/: WHEEL_BR_1.stl  WHEEL_FR_1.stl  _WHEEL_BL_1.stl  _WHEEL_FL_1.stl  base_link.stl
bot_description/urdf/: materials.xacro  omnidrive.gazebo  omnidrive.trans  omnidrive.xacro
bot_gazebo/: CMakeLists.txt  package.xml
bot_gazebo/launch/: gazebo.launch.py
bot_gazebo/worlds/: newworld.world
bot_nav/: CMakeLists.txt  package.xml
bot_nav/config/: display.rviz  navigation.yaml
bot_nav/launch/: nav.launch.py
bot_nav/maps/: new_map.pgm  new_map.yaml
